--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div></div>
     <div></div>
   </div>
-  <script src="cityskyline.js" />
+  <script src="cityskyline.js"></script>
 
 </body>
 
