--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-
+  <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet"></a></div>
+  <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet/original"></a></div>
   <!-- Clouds START -->
 
   <div id="clouds" class="clouds-day">
