--- a/original.html
+++ b/original.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-11-BalanceSheet/original"></a></div>
+    
     <div class="background-buildings sky">
       <div></div>
       <div></div>
